--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,8 @@
+name: Hello World Action
+
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
-      - name: 24f2000695@ds.study.iitm.ac.in
+      - name: 24F2000695@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
